--- a/config.json
+++ b/config.json
@@ -4,10 +4,10 @@
         "Oficial de Justiça",
         "nomeação"
     ],
-    "email_remetente": "SEU_EMAIL@gmail.com",
-    "email_senha": "SUA_SENHA_DE_APP",
-    "email_destino": "SEU_EMAIL@gmail.com",
-    "whatsapp_numero": "5591999999999",
+    "email_remetente": "lucas.almada16@gmail.com",
+    "email_senha": "ybbh togx euco lqhp",
+    "email_destino": "lucas.almada16@gmail.com",
+    "whatsapp_numero": "5593991077655",
     "smtp_servidor": "smtp.gmail.com",
     "smtp_porta": 587
 }
