--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
           python-version: '3.11'
 
       - name: Instalar dependências
-        run: pip install openpyxl requests beautifulsoup4
+        run: pip install openpyxl requests beautifulsoup4 PyPDF2
 
       - name: Executar monitor
         run: python monitor_tjpa.py
